--- a/style.css
+++ b/style.css
@@ -11,9 +11,13 @@ div {
     display:flex;
     justify-content: center;
     flex-wrap:wrap;
+    margin:auto;
+    width:400px;
+    height:600px;
 }
 
 #calc {
+    margin:auto;
     display:flex;
     width:400px;
     height:500px;
